@startuml TrencitoPuertoAzul_Rollback
!theme plain
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

' --- Clases de Dominio (Backend) ---
class CoordenadaGps {
    - id: long
    - latitude: double
    - longitude: double
    - speed: double
    - timestamp: LocalDateTime
    + CoordenadaGps()
    + CoordenadaGps(latitude: double, longitude: double)
    + CoordenadaGps(latitude: double, longitude: double, speed: double)
    + CoordenadaGps(id: long, latitude: double, longitude: double, speed: double, timestamp: LocalDateTime)
    + getId(): long
    + getLatitude(): double
    + setLatitude(latitude: double): void
    + getLongitude(): double
    + setLongitude(longitude: double): void
    + getSpeed(): double
    + setSpeed(speed: double): void
    + getTimestamp(): LocalDateTime
    + setTimestamp(timestamp: LocalDateTime): void
}

' --- Capa de Datos (Backend) ---
interface JpaRepository <<Interface>>
interface GpsCoordenadasRepository

' --- Capa de Servicio (Backend) ---
class GpsService {
    - gpsCoordenadasRepository: GpsCoordenadasRepository
    - simpMessagingTemplate: SimpMessagingTemplate
    + getCoordenadas(): CoordenadaGps
    + createCoordenadaas(latitude: double, longitude: double, speed: double): CoordenadaGps
    + updateCoordenadas(latitude: double, longitude: double): CoordenadaGps
    + updateCoordenadas(latitude: double, longitude: double, speed: double): CoordenadaGps
}

' --- Capa de Controlador (Backend) ---
class CoordenadaGpsController {
    - gpsCoordenadasRepository: GpsCoordenadasRepository
    - gpsService: GpsService
    + getCoordenadaGps(): ResponseEntity<CoordenadaGps>
    + updateCoordenadaGps(latitude: double, longitude: double): ResponseEntity<?>
    + updateCoordenadaGps(latitude: double, longitude: double, speed: double): ResponseEntity<?>
    + createCoordenadaGps(latitude: double, longitude: double, speed: double): ResponseEntity<?>
    + rollbackCoordGps(): ResponseEntity<?>
}

' --- Servicios Frontend ---
class MapaService <<Service>> {
    + obtenerPosicionTren(): Promise<Object>
    + obtenerEstaciones(): Promise<Array>
    + obtenerPuestosTren(): Promise<Number>
    + crearEstacion(nombre: String, latitud: Number, longitud: Number): Promise<Object>
    + eliminarEstacion(id: Number): Promise<boolean>
}

class NotificacionService <<Service>> {
    + reportarErrorUbi(): Promise<Object>
}

' --- Controladores Frontend ---
class MapaControllerJS <<Controller>> {
    + map: Object
    + stationData: Object
    + leafletMarkers: Object
    + trencitoMarker: Object
    + isCreatingStation: boolean
    + userWaitingStationId: Number
    + trenIconoPersonalizado: Object
    + iniciar(): Promise<void>
    + iniciarMapa(): void
    + cargarDatosIniciales(): Promise<void>
    + crearMarcadorEstacion(id: Number, data: Object): void
    + alHacerClicEnMapa(e: Event): void
    + manejarCrearEstacion(latlng: Object): Promise<void>
    + configurarWebSockets(): void
    + alActualizarEstacion(data: Object): void
    + alActualizarTren(data: Object): void
    + actualizarPosicionTren(data: Object): void
    + configurarEventos(): void
    + reportarFallaMapa(): void
}

' --- Relaciones ---
JpaRepository <|.. GpsCoordenadasRepository
GpsCoordenadasRepository ..> CoordenadaGps : <<manages>>
GpsService --> GpsCoordenadasRepository : gpsCoordenadasRepository
CoordenadaGpsController --> GpsService : gpsService
CoordenadaGpsController --> GpsCoordenadasRepository : gpsCoordenadasRepository

MapaControllerJS --> MapaService : <<usa>>
MapaControllerJS --> NotificacionService : <<usa>>
MapaService ..> CoordenadaGpsController : <<HTTP GET /api/v1/gps>>
NotificacionService ..> CoordenadaGpsController : <<HTTP GET /api/v1/gps/rollback/>>

@enduml
